added my information

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,9 +13,9 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/BK.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
-
+        
         <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
@@ -230,8 +230,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Brandon Kupczyk &bull; 2017</a>.</p>
       </footer>
 
     </div>
